# ComputerGraphicsLab

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/objects/container/: model.mtl
assets/objects/garden/source/garden.zip/: garden_tex.mtl
assets/objects/jet/source/finalzip/: objFinalLP.mtl
assets/objects/persian-city/source/Desktop/: Arabic+City.mtl
assets/objects/sphere/: globe-sphere.mtl
assets/paths/: rolls.rot
bspline_assignment/: README.md  bsplineanimation.cpp  bsplineanimation.h  bsplinesample.cpp  bsplinesample.h  bsplinesceneloader.cpp  bsplinesceneloader.h  positiontrackerscript.cpp  positiontrackerscript.h
deferred_assignment/: README.md  deferredsample.cpp  deferredsample.h  deferredsceneloader.cpp  deferredsceneloader.h
particles_assignment/: README.md  particlessample.cpp  particlessample.h  particlessceneloader.cpp  particlessceneloader.h  waterfallanimation.cpp  waterfallanimation.h
